--- a/electrum.desktop
+++ b/electrum.desktop
@@ -2,7 +2,7 @@
 # sudo desktop-file-install electrum.desktop
 
 [Desktop Entry]
-Comment=Lightweight Bitcoin Client
+Comment=Lightweight LBC Client
 Exec=electrum %u
 GenericName[en_US]=Electrum
 GenericName=Electrum
@@ -14,4 +14,3 @@ StartupNotify=false
 Terminal=false
 Type=Application
 MimeType=x-scheme-handler/bitcoin;
-
